--- a/.github/workflows/proile_metrics.yml
+++ b/.github/workflows/proile_metrics.yml
@@ -22,7 +22,7 @@ jobs:
           #  - read:user     (for user related data)
           #  - read:packages (for some packages related data)
           #  - repo          (optional, if you want to include private repositories)
-          token: ${{ secrets.metrics_classic }}
+          token: ${{ secrets.personal_metrics }}
 
           # Options
           template: classic
